ingress/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec: 
  rules: 
  - host: dashboard.com
    http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service: 
            name: kubernetes-dashboard
            port: 
              number: 80
