ingress/ingress.yaml
apiVersion: networking,k8s,io/v1.19
kind: Ingress
metadata: 
  name: myapp-ingress
spec: 
  rules: 
  - host: myapp.com
    http:
      paths:
      - backend:
          serviceName: myapp-internal-service
          servicePort: 8080
