ingress/name-virtual-host-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: name-virtual-host-ingress
spec: 
  rules: 
  - host: analytics.myapp.com
    http:
      paths:
        backend:
          service: 
            name: analytics-service
            port: 
              number: 3000
  - host: shopping.myapp.com
    http:
      paths:
        backend:
          service: 
            name: shopping-service
            port: 
              number: 8080
